initial-tutorials/sentiment-analyzer/webapp/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: sa-ingress-web-app
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - http:
              paths:
                  - path: /sentiment
                    backend:
                        serviceName: sa-webapp
                        servicePort: 80
